<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/text_header_reply"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="invisible"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reply_textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_header_reply"/>
    <Button
            android:text="@string/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_send"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="launchSecondActivity"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:ems="10"
            android:id="@+id/editText_main" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_send" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_send" android:layout_marginRight="8dp"
            android:hint="@string/hint_enter_your_message_here"/>
</android.support.constraint.ConstraintLayout>